--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,13 +12,14 @@
 name: "CodeQL"
 
 on:
-  push:
-    branches: [ master, *release-*, RELEASE*, develop ]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ master ]
-  schedule:
-    - cron: '38 8 * * 3'
+  # push:
+  #   branches: [ master, *release-*, RELEASE*, develop ]
+  # pull_request:
+  #   # The branches below must be a subset of the branches above
+  #   branches: [ master ]
+  # schedule:
+  #   - cron: '38 8 * * 3'
+  workflow_dispatch:
 
 jobs:
   analyze:
