--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -18,10 +18,13 @@ jobs:
     - name: Build Docker and push Image
       run: |
         IFS=$'\n' read -d '' -ra microsvc < .github/MICROSERVICES_LIST/microservices_list.txt
+        echo $microsvc
         for work_dir in "${microsvc[@]}"; do
           image_name=$(echo "$work_dir" | cut -d'/' -f1)
-          docker build -t $DOCKER_USERNAME/$image_name:$GITHUB_SHA -f ./build/maven/Dockerfile --build-arg WORK_DIR=$work_dir .
-          docker push $DOCKER_USERNAME/$image_name:$GITHUB_SHA
+          echo $work_dir
+          echo $image_name
+          # docker build -t $DOCKER_USERNAME/$image_name:$GITHUB_SHA -f ./build/maven/Dockerfile --build-arg WORK_DIR=$work_dir .
+          # docker push $DOCKER_USERNAME/$image_name:$GITHUB_SHA
         done
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
