--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -19,13 +19,13 @@ jobs:
       run: |
         IFS=$'\n' read -d '' -ra microsvc < .github/MICROSERVICES_LIST/microservices_list.txt
         echo $microsvc
-        for work_dir in "${microsvc[@]}"; do
-          image_name=$(echo "$work_dir" | cut -d'/' -f1)
-          echo $work_dir
-          echo $image_name
+        # for work_dir in "${microsvc[@]}"; do
+        #   image_name=$(echo "$work_dir" | cut -d'/' -f1)
+        #   echo $work_dir
+        #   echo $image_name
           # docker build -t $DOCKER_USERNAME/$image_name:$GITHUB_SHA -f ./build/maven/Dockerfile --build-arg WORK_DIR=$work_dir .
           # docker push $DOCKER_USERNAME/$image_name:$GITHUB_SHA
-        done
+        # done
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         GITHUB_SHA: ${{ github.sha }}
