--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -17,8 +17,9 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build Docker and push Image
       run: |
-        IFS=$'\n' read -d '' -ra microsvc < .github/MICROSERVICES_LIST/microservices_list.txt
-        echo $microsvc
+        cat .github/MICROSERVICES_LIST/microservices_list.txt
+        # IFS=$'\n' read -d '' -ra microsvc < .github/MICROSERVICES_LIST/microservices_list.txt
+        # echo $microsvc
         # for work_dir in "${microsvc[@]}"; do
         #   image_name=$(echo "$work_dir" | cut -d'/' -f1)
         #   echo $work_dir
