--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -14,20 +14,25 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        
-    - name: Build Docker and push Image
-      run: |
-        # cat .github/MICROSERVICES_LIST/microservices_list.txt
-        # IFS=$'\n' read -d '' -ra microsvc < .github/MICROSERVICES_LIST/microservices_list.txt
-        readarray -t microsvc < .github/MICROSERVICES_LIST/microservices_list.txt
-        echo $microsvc
-        for work_dir in "${microsvc[@]}"; do
-          image_name=$(echo "$work_dir" | cut -d'/' -f1)
-          echo $work_dir
-          echo $image_name
-          docker build -t $DOCKER_USERNAME/$image_name:$GITHUB_SHA -f ./build/maven/Dockerfile --build-arg WORK_DIR=$work_dir .
-          docker push $DOCKER_USERNAME/$image_name:$GITHUB_SHA
-        done
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        GITHUB_SHA: ${{ github.sha }}
+    - name: Setup Python and Pip
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10' 
+    - run: python my_script.py
+    - run: pip3 --version
+    # - name: Build Docker and push Image
+    #   run: |
+    #     # cat .github/MICROSERVICES_LIST/microservices_list.txt
+    #     # IFS=$'\n' read -d '' -ra microsvc < .github/MICROSERVICES_LIST/microservices_list.txt
+    #     readarray -t microsvc < .github/MICROSERVICES_LIST/microservices_list.txt
+    #     echo $microsvc
+    #     for work_dir in "${microsvc[@]}"; do
+    #       image_name=$(echo "$work_dir" | cut -d'/' -f1)
+    #       echo $work_dir
+    #       echo $image_name
+    #       docker build -t $DOCKER_USERNAME/$image_name:$GITHUB_SHA -f ./build/maven/Dockerfile --build-arg WORK_DIR=$work_dir .
+    #       docker push $DOCKER_USERNAME/$image_name:$GITHUB_SHA
+    #     done
+    #   env:
+    #     DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+    #     GITHUB_SHA: ${{ github.sha }}
