--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -18,7 +18,31 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10' 
-    - run: pip3 --version
+    - name: Installing YAMl reader tool yq
+      run: pip3 install yq
+    - name: Build and push Docker images
+      run: |
+        config_file=build/build-config.yml
+        microservices=$(yq ".config | length" "$config_file")
+        for ((count = 0; count < $microservices; count++)); do
+          echo "Name: $(yq .config[$count].name "$config_file")"
+          images_number=$(yq ".config[$count].build | length" "$config_file")
+          
+          for ((count2 = 0; count2 < $images_number; count2++)); do
+            work_dir=(yq .config[$count].build[count2]."work-dir" "$config_file")
+            image_name=(yq .config[$count].build[count2]."image-name" "$config_file")
+            dockerfile=(yq .config[$count].build[count2]."dockerfile" "$config_file")
+
+            if [ "$dockerfile" = "null" ]; then
+              echo "docker build -t $DOCKER_USERNAME/$image_name:$GITHUB_SHA --build-arg WORK_DIR=$work_dir ."
+            else
+              echo "docker build -t $DOCKER_USERNAME/$image_name:$GITHUB_SHA -f $dockerfile --build-arg WORK_DIR=$work_dir ."
+            fi
+          done
+        done
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        GITHUB_SHA: ${{ github.sha }}
     # - name: Build Docker and push Image
     #   run: |
     #     # cat .github/MICROSERVICES_LIST/microservices_list.txt
