--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -32,9 +32,9 @@ jobs:
             c1=$count
             c2=$count2
             echo "$c1 and $c2"
-            work_dir=$(yq --arg c1 "$count" --arg c2 "$count2" '.config[$c1].build[$c2]."work-dir"' "$config_file")
-            image_name=$(yq --arg c1 "$count" --arg c2 "$count2" '.config[$c1].build[$c2]."image-name"' "$config_file")
-            dockerfile=$(yq --arg c1 "$count" --arg c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file")
+            work_dir=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."work-dir"' "$config_file")
+            image_name=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."image-name"' "$config_file")
+            dockerfile=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file")
             
             if [ "$dockerfile" = "null" ]; then
               echo "docker build -t $DOCKER_USERNAME/$image_name:$tag --build-arg WORK_DIR=$work_dir ."
