--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -27,24 +27,19 @@ jobs:
         for ((count = 0; count < $microservices; count++)); do
           echo "Name: $(yq .config[$count].name "$config_file")"
           images_number=$(yq ".config[$count].build | length" "$config_file")
-          echo $images_number
           for ((count2 = 0; count2 < $images_number; count2++)); do
-            c1=$count
-            c2=$count2
-            echo "$c1 and $c2"
             work_dir=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."work-dir"' "$config_file")
             image_name=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."image-name"' "$config_file")
             dockerfile=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file")
             
             if [ "$dockerfile" = "null" ]; then
-              echo "docker build -t $DOCKER_USERNAME/$image_name:$tag --build-arg WORK_DIR=$work_dir ."
+              docker build -t $DOCKER_USERNAME/$image_name:$tag --build-arg WORK_DIR=$work_dir .
             else
-              echo "docker build -t $DOCKER_USERNAME/$image_name:$tag -f $dockerfile --build-arg WORK_DIR=$work_dir ."
+              docker build -t $DOCKER_USERNAME/$image_name:$tag -f $dockerfile --build-arg WORK_DIR=$work_dir .
             fi
+            docker push $DOCKER_USERNAME/$image_name:$tag
           done
         done
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         tag: ${{ github.run_number }}
-    #     DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-    #     GITHUB_SHA: ${{ github.sha }}
