--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -33,13 +33,13 @@ jobs:
             dockerfile=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file")
             
             if [ "$dockerfile" = "null" ]; then
-              docker build -t $DOCKER_USERNAME/$image_name:"$tag" --build-arg WORK_DIR=$work_dir .
+              docker build -t $DOCKER_USERNAME/$image_name:$tag --build-arg WORK_DIR=$work_dir .
             else
-              docker build -t $DOCKER_USERNAME/$image_name:"$tag" -f $dockerfile --build-arg WORK_DIR=$work_dir .
+              docker build -t $DOCKER_USERNAME/$image_name:$tag -f $dockerfile --build-arg WORK_DIR=$work_dir .
             fi
-            docker push $DOCKER_USERNAME/$image_name:"$tag"
+            docker push $DOCKER_USERNAME/$image_name:$tag
           done
         done
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        tag: ${{ github.run_number }}
+        tag: ${{ github.sha }}
