--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -28,9 +28,9 @@ jobs:
           echo "Name: $(yq .config[$count].name "$config_file")"
           images_number=$(yq ".config[$count].build | length" "$config_file")
           for ((count2 = 0; count2 < $images_number; count2++)); do
-            work_dir=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."work-dir"' "$config_file")
-            image_name=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."image-name"' "$config_file")
-            dockerfile=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file")
+            work_dir=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."work-dir"' "$config_file" | tr -d '"' )
+            image_name=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."image-name"' "$config_file" | tr -d '"')
+            dockerfile=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file" | tr -d '"')
             
             if [ "$dockerfile" = "null" ]; then
               docker build -t $DOCKER_USERNAME/$image_name:$tag --build-arg WORK_DIR=$work_dir .
