--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -33,7 +33,7 @@ jobs:
             dockerfile=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file" | tr -d '"')
             
             if [ "$dockerfile" = "null" ]; then
-              docker build -t $DOCKER_USERNAME/$image_name:$tag -f Dockerfile --build-arg WORK_DIR=$work_dir .
+              docker build -t $DOCKER_USERNAME/$image_name:$tag -f "$work_dir"/Dockerfile --build-arg WORK_DIR=$work_dir .
             else
               docker build -t $DOCKER_USERNAME/$image_name:$tag -f $dockerfile --build-arg WORK_DIR=$work_dir .
             fi
