--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -34,6 +34,7 @@ jobs:
             dockerfile=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file" | tr -d '"')
             
             if [ "$dockerfile" = "null" ]; then
+              continue
               dockerfile=$work_dir/Dockerfile
             fi
             echo $pwd
