--- a/.github/workflows/build-docker-image-microservice.yml
+++ b/.github/workflows/build-docker-image-microservice.yml
@@ -13,7 +13,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build and push Docker images
       run: |
-        docker build -t $DOCKER_USERNAME/$image-name:$tag -f $dockerfile --build-arg WORK_DIR=$work-dir .
+        docker build -t $DOCKER_USERNAME/$'image-name':$tag -f $dockerfile --build-arg WORK_DIR=$'work-dir' .
         docker push $DOCKER_USERNAME/$image_name:$tag
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
