--- a/.github/workflows/build-docker-image-microservice.yml
+++ b/.github/workflows/build-docker-image-microservice.yml
@@ -17,7 +17,7 @@ jobs:
         docker push $DOCKER_USERNAME/$image_name:$tag
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        work_dir: egove-access-control
+        work_dir: egov-access-control
         image_name: egov-access-control
         dockerfile: build/maven/Dockerfile
         tag: ${{ github.sha }}
