--- a/.github/workflows/build-docker-image-microservice.yml
+++ b/.github/workflows/build-docker-image-microservice.yml
@@ -1,5 +1,5 @@
 name: Build and push Docker images for individual microservice
-on: ["push"]
+on: ["workflow_dispatch"]
 jobs:
   build_push:
     runs-on: ubuntu-latest
