--- a/.github/workflows/build-image-input-method.yml
+++ b/.github/workflows/build-image-input-method.yml
@@ -24,6 +24,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build and push Docker images
       run: |
+        cd ${{ inputs.work_dir }}
         if [ ${{ github.event.inputs.dockerfile != '' }} ]; then
           docker build -t $DOCKER_USERNAME/${{ inputs.image_name }}:$tag -f ${{ inputs.work_dir }}/Dockerfile  --build-arg WORK_DIR=${{ inputs.work_dir }} .
         else
