--- a/.github/workflows/build-image-input-method.yml
+++ b/.github/workflows/build-image-input-method.yml
@@ -26,10 +26,11 @@ jobs:
       run: |
         home_dir=$(pwd)
         if [ ${{ github.event.inputs.dockerfile != '' }} ]; then
-          cd ${{ inputs.work_dir }}
-          docker build -t $DOCKER_USERNAME/${{ inputs.image_name }}:$tag -f Dockerfile .
-          cd $home_dir
+          # cd ${{ inputs.work_dir }}
+          # docker build -t $DOCKER_USERNAME/${{ inputs.image_name }}:$tag -f Dockerfile .
+          # cd $home_dir
         else
+          echo "Hi"
           docker build -t $DOCKER_USERNAME/${{ inputs.image_name }}:$tag -f ${{ inputs.dockerfile }} --build-arg WORK_DIR=${{ inputs.work_dir }} .
         fi
         docker push $DOCKER_USERNAME/${{ inputs.image_name }}:$tag
