--- a/.github/workflows/build-image-input-method.yml
+++ b/.github/workflows/build-image-input-method.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         home_dir=$(pwd)
         if [ ${{ github.event.inputs.dockerfile != '' }} ]; then
+        echo "HI"
           # cd ${{ inputs.work_dir }}
           # docker build -t $DOCKER_USERNAME/${{ inputs.image_name }}:$tag -f Dockerfile .
           # cd $home_dir
