--- a/.github/workflows/all-images-build-push.yml
+++ b/.github/workflows/all-images-build-push.yml
@@ -30,24 +30,21 @@ jobs:
           echo "Name: $(yq .config[$count].name "$config_file")"
           images_number=$(yq ".config[$count].build | length" "$config_file")
           echo $images_number
-        done
-      #     for ((count2 = 0; count2 < $images_number; count2++)); do
-      #       work_dir=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."work-dir"' "$config_file" | tr -d '"' )
-      #       image_name=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."image-name"' "$config_file" | tr -d '"')
-      #       dockerfile=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file" | tr -d '"')
+          for ((count2 = 0; count2 < $images_number; count2++)); do
+            work_dir=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."work-dir"' "$config_file" | tr -d '"' )
+            image_name=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."image-name"' "$config_file" | tr -d '"')
+            dockerfile=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file" | tr -d '"')
             
-      #       if [ "$dockerfile" = "null" ]; then
-      #         cd $work_dir
-      #         docker build -t $DOCKER_USERNAME/$image_name:$tag -f Dockerfile .
-      #         cd $home_dir
-      #       else
-      #         echo $pwd
-      #         docker build -t $DOCKER_USERNAME/$image_name:$tag -f $dockerfile --build-arg WORK_DIR=$work_dir .
-      #       fi
-      #       docker push $DOCKER_USERNAME/$image_name:$tag
-      #       cd $working_dir
-      #     done
-        # done
+            if [ '$dockerfile' == 'null' ]; then
+              cd $work_dir
+              docker build -t $DOCKER_USERNAME/$image_name:$tag .
+              cd $home_dir
+            else
+              docker build -t $DOCKER_USERNAME/$image_name:$tag -f $dockerfile --build-arg WORK_DIR=$work_dir .
+            fi
+            docker push $DOCKER_USERNAME/$image_name:$tag
+          done
+        done
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         tag: ${{ github.sha }}
