--- a/.github/workflows/all-images-build-push.yml
+++ b/.github/workflows/all-images-build-push.yml
@@ -34,15 +34,17 @@ jobs:
             work_dir=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."work-dir"' "$config_file" | tr -d '"' )
             image_name=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."image-name"' "$config_file" | tr -d '"')
             dockerfile=$(yq --argjson c1 "$count" --argjson c2 "$count2" '.config[$c1].build[$c2]."dockerfile"' "$config_file" | tr -d '"')
-            
+            echo $dockerfile
             if [ '$dockerfile' == 'null' ]; then
+              echo "If"
               cd $work_dir
-              docker build -t $DOCKER_USERNAME/$image_name:$tag .
+              # docker build -t $DOCKER_USERNAME/$image_name:$tag -f Dockerfile.
               cd $home_dir
             else
-              docker build -t $DOCKER_USERNAME/$image_name:$tag -f $dockerfile --build-arg WORK_DIR=$work_dir .
+              echo "else"
+              # docker build -t $DOCKER_USERNAME/$image_name:$tag -f $dockerfile --build-arg WORK_DIR=$work_dir .
             fi
-            docker push $DOCKER_USERNAME/$image_name:$tag
+            # docker push $DOCKER_USERNAME/$image_name:$tag
           done
         done
       env:
