--- a/.github/workflows/all-images-build-push.yml
+++ b/.github/workflows/all-images-build-push.yml
@@ -22,6 +22,7 @@ jobs:
       run: pip3 install yq
     - name: Build and push Docker images
       run: |
+        set +e
         home_dir=$(pwd)
         config_file=build/build-config.yml
         microservices=$(yq ".config | length" "$config_file")
